# hk-stock-allocation

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: portfolio.yml  positions_current_live.csv
configs/universe/: portfolio.yml
project_tools/: 7z_exclusion_list.txt  combine_code.py
scripts/: run.sh
src/hk_alloc/: __init__.py  config_loader.py  main.py  rq_helpers.py
tests/: test_allocation_math.py  test_config_loader.py  test_ids.py  test_integration_rqdata.py  test_rq_helpers_internal.py  test_valuation.py
